syntax = "proto3";

package org.fibsters;

message InputPayloadRequest {

  optional string input = 1;

}